@@ -247,6 +247,10 @@ public class GlossaryAutoCompleterViewTest extends TestCore {
             }
 
             @Override
+            public void insertTextAndMark(String text) {
+            }
+
+            @Override
             public void insertTag(String tag) {
             }
 
