@@ -2,7 +2,7 @@
  OmegaT 4.0.0
 ----------------------------------------------------------------------
  21 Enhancements
-  3 Bug fixes
+  4 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
 4.0.0 vs 3.6.0 update 2
@@ -83,6 +83,9 @@ to the wrong filter
 
   - TMX not loaded when extension is in uppercase
   https://sourceforge.net/p/omegat/bugs/809/
+
+  - Ctrl+I with MT match is not shown with red background 
+  https://sourceforge.net/p/omegat/bugs/754/
 
 ----------------------------------------------------------------------
  OmegaT 3.6.0 update 2
